style: fix more dark mode issues

--- a/src/assets/globals.scss
+++ b/src/assets/globals.scss
@@ -18,7 +18,7 @@ html,
 }
 
 a {
-  @apply underline text-link;
+  @apply underline text-link dark:text-primary;
 }
 
 #main:focus {
