--- a/src/pages/advanced-search.module.scss
+++ b/src/pages/advanced-search.module.scss
@@ -5,3 +5,11 @@
 .subtitle {
   @apply font-light text-3xl;
 }
+
+.searchQuery {
+  @apply w-full font-mono border border-gray-200 bg-gray-200 rounded-r-sm text-left p-4 truncate dark:bg-gray-800 dark:border-gray-800;
+}
+
+.submitButton {
+  @apply border border-link text-link p-4 rounded-l-sm hover:bg-link hover:text-white dark:border-primary dark:text-primary;
+}
